forth/test/fail/test_dot_call_plain_intrin.af
\ Must fail to compile.
fun: test_dot_call_plain_intrin_fail { adr -- err }
  adr debug_mem
end
